After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 740912 - MinGW build failure with --disable-modules
MinGW build failure with --disable-modules
Status: RESOLVED FIXED
Product: gdk-pixbuf
Classification: Platform
Component: general
git master
Other Windows
: Normal normal
: ---
Assigned To: gdk-pixbuf-maint
gdk-pixbuf-maint
Depends on:
Blocks:
 
 
Reported: 2014-11-30 04:45 UTC by Benjamin Gilbert
Modified: 2015-08-23 15:18 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix (2.79 KB, patch)
2015-08-19 02:57 UTC, Benjamin Gilbert
none Details | Review

Description Benjamin Gilbert 2014-11-30 04:45:42 UTC
a55aa6eb replaced gdk_pixbuf_win32_get_toplevel(), which was built unconditionally on Windows, with gdk_pixbuf_get_toplevel(), which is only built if USE_GMODULE is defined.  This causes a build failure when configured with --disable-modules:

  CCLD     libgdk_pixbuf-2.0.la
.libs/gdk-pixbuf-util.o: In function `get_localedir':
[...]/gdk-pixbuf-2.31.2/gdk-pixbuf/gdk-pixbuf-util.c:359: undefined reference to `gdk_pixbuf_get_toplevel'
collect2: error: ld returned 1 exit status
make[4]: *** [libgdk_pixbuf-2.0.la] Error 1
Comment 1 Benjamin Gilbert 2015-08-19 02:57:00 UTC
Created attachment 309517 [details] [review]
Fix