Build gdk_pixbuf_get_toplevel() even if !USE_GMODULE

a55aa6eb introduced gdk_pixbuf_get_toplevel(), which is called if
GDK_PIXBUF_RELOCATABLE but is only built if USE_GMODULE &&
GDK_PIXBUF_RELOCATABLE.  This causes build failures on MinGW and Darwin
when configured with --disable-modules.

https://bugzilla.gnome.org/show_bug.cgi?id=740912